# web-assembly-and-rust

./: Cargo.toml  Readme.md  package-lock.json  package.json  webpack.config.js
Basics/: Cargo.toml
Basics/src/: main.rs
public/: main.js
src/: lib.rs
